// Copyright (c) 2021 Quark Container Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";
package qactor;

service ActorDriverService {
    rpc Registe(PodRegisterReq) returns (PodRegisterResp) {}
}

message PodRegisterReq {
    string podId = 1;
}

message PodRegisterResp {
    string err = 1;
    ActorSystem system = 2;
}

message Location {
    string podName = 2;
    uint32 processId = 3;
    uint32 threadId = 4;
}

message Actor {
    string id = 1;
    string modName = 2;
    string className = 3;
    Location location = 4;
}

message ActorCode {
    string id = 1;
    bytes data = 2;
}

message ActorSystem {
    repeated Actor actors = 1;
    repeated ActorCode localActors = 2;
}

service ActorPodService {
    rpc Tell(TellReq) returns (TellResp) {}
}

message TellReq {
    string actorId = 1;
    string func = 2;
    uint64 reqId = 3;
    bytes data = 4;
}

message TellResp {
    string err = 1;
}